    ReflectionMethod::invokeArgs()). (Laruence)

- SOAP
  . Fixed basic HTTP authentication for WSDL sub requests. (Dmitry)
  . Fixed bug #60887 (SoapClient ignores user_agent option and sends no
    User-Agent header). (carloschilazo at gmail dot com)
  . Fixed bug #60842, #51775 (Chunked response parsing error when 
    chunksize length line is > 10 bytes). (Ilia)

- SPL
  . Fixed memory leak when calling SplFileInfo's constructor twice. (Felipe)
  . Fixed bug #61418 (Segmentation fault when DirectoryIterator's or
    FilesystemIterator's iterators are requested more than once without
    having had its dtor callback called in between). (Gustavo)
  . Fixed bug #61347 (inconsistent isset behavior of Arrayobject). (Laruence)
  . Fixed bug #61326 (ArrayObject comparison). (Gustavo)

- SQLite3 extension:
  . Add createCollation() method. (Brad Dewar)

- Session:
  . Fixed bug #60860 (session.save_handler=user without defined function core
    dumps). (Felipe)
  . Fixed bug #60634 (Segmentation fault when trying to die() in
    SessionHandler::write()). (Ilia)

- Streams:
  . Fixed bug #61371 (stream_context_create() causes memory leaks on use
    streams_socket_create). (Gustavo)
  . Fixed bug #61253 (Wrappers opened with errors concurrency problem on ZTS).
    (Gustavo)
  . Fixed bug #61115 (stream related segfault on fatal error in
    php_stream_context_link). (Gustavo)
  . Fixed bug #60817 (stream_get_line() reads from stream even when there is
    already sufficient data buffered). stream_get_line() now behaves more like
    fgets(), as is documented. (Gustavo)
  . Further fix for bug #60455 (stream_get_line misbehaves if EOF is not
    detected together with the last read). (Gustavo)
  . Fixed bug #60106 (stream_socket_server silently truncates long unix
    socket paths). (Ilia)

- Tidy:
  . Fixed bug #54682 (tidy null pointer dereference). (Tony, David Soria Parra)

- XMLRPC: