@@ -92,6 +92,8 @@ PHP                                                                        NEWS
     User-Agent header). (carloschilazo at gmail dot com)
   . Fixed bug #60842, #51775 (Chunked response parsing error when 
     chunksize length line is > 10 bytes). (Ilia)
+  . Fixed bug #49853 (Soap Client stream context header option ignored).
+    (Dmitry)
 
 - SPL
   . Fixed memory leak when calling SplFileInfo's constructor twice. (Felipe)
